Fix : meets.html And meetsCollection.html 연결

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <script src="/js/auth.js" defer></script>
     <meta charset="UTF-8">
