--- a/src/main/resources/templates/meetsCollection.html
+++ b/src/main/resources/templates/meetsCollection.html
@@ -45,6 +45,8 @@
       <div>
         <h2 class="text-lg font-bold" th:text="${meet.title}">모임 제목</h2>
         <p class="text-gray-600" th:text="${meet.content}">모임 설명</p>
+        <!-- 현재 인원 수/최대 인원 수 표시 -->
+        <p class="text-gray-600 mt-2">인원: <span th:text="${meet.memberCount}"></span>/<span th:text="${meet.maxMemberCount}"></span></p>
         <div class="mt-4 space-x-2">
           <!-- 모임 상세 페이지로 이동할 때 meetId와 creatorId를 URL에 포함 -->
           <a th:href="@{'/public/meets/' + ${meet.id}}"
@@ -54,10 +56,6 @@
       </div>
     </div>
   </div>
-
-<!--  <div id="meetsList" class="grid grid-cols-1 md:grid-cols-2 gap-8">-->
-<!--    &lt;!&ndash; 모임 목록이 여기에 동적으로 추가됩니다 &ndash;&gt;-->
-<!--  </div>-->
 
   <div class="mt-8">
     <div class="relative">
@@ -81,30 +79,13 @@
 </footer>
 
 <script>
-  const accessToken = localStorage.getItem('Authorization');
-  if (!accessToken) {
-    window.location.href = '/login'; // 로그인이 안 되어 있다면 로그인 페이지로 이동
-  }
-
-  async function fetchWithAuth(url, options = {}) {
-    options.headers = {
-      ...options.headers,
-      'Authorization': accessToken,
-      'Content-Type': 'application/json'
-    };
-    return fetch(url, options);
-  }
-
   async function openCreateMeet() {
     window.location.href = '/public/kakaoMap'; // 모임 생성하기로 이동
   }
 
   async function openMeet(meetId, creatorId) {
-    // window.open(`/public/meets/${meetId}`, "meetsWindow", "width=800,height=600,top=100,left=100");
     window.location.href = `/public/meets/${meetId}`; // 모임 상세 페이지로 이동
   }
-
-
 
 </script>
 </body>
