fix : 캐러셀 오류 해결

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -12,7 +12,7 @@
 
         .carousel {
             display: flex;
-            overflow: hidden;
+            overflow: visible;
         }
 
         .carousel-item {
