--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -79,6 +79,10 @@
 
         </nav>
     </div>
+
+    <div class="flex items-center">
+        <button id="logoutBtn" class="bg-black text-white px-4 py-2 rounded">로그아웃</button>
+    </div>
 </header>
 
 <main class="p-4">
@@ -309,7 +313,7 @@
 
         document.getElementById('logoutBtn').addEventListener('click', () => {
             localStorage.removeItem('Authorization');
-            window.location.href = '/login';
+            window.location.href = '/';
         });
 
 
