Del : 내 프로필 버튼 삭제, modified : 오늘의 동친 -> 내 게시물 모아보기

--- a/src/main/resources/templates/userboardCollection.html
+++ b/src/main/resources/templates/userboardCollection.html
@@ -37,12 +37,11 @@
     <a href="/public/userboardCollection" class="mr-4">오늘의 동친</a>
     <a href="/public/meetsCollection" class="mr-4">내 주변 모임</a>
     <a href="/public/MyPage" class="mr-4">MyPage</a>
-    <button id="profileBtn" class="mr-4">내 프로필</button>
     <button id="logoutBtn" class="bg-black text-white px-4 py-2 rounded">로그아웃</button>
   </nav>
 </div>
 <div class="container mx-auto px-4 py-8">
-  <h1 class="text-3xl font-bold mb-8">오늘의 동친</h1>
+  <h1 class="text-3xl font-bold mb-8">내 게시물 모아보기</h1>
   <div>
     <button id="createBoardBtn" class="bg-blue-500 text-white px-4 py-2 rounded mb-4">
       게시판 만들기
