--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -79,6 +79,7 @@
                     if (accessToken) {
                         localStorage.setItem('Authorization', accessToken);
                         localStorage.setItem('username', username);
+                        localStorage.setItem('userId', data.userId);
                         alert('로그인에 성공하였습니다!');
                         window.location.href = '/public/main';
                     } else {
