fix : 홈 버튼 작동하게 변경

--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,7 +43,7 @@
       <img src="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96" width="70" height="70" alt="Logo" class="mr-4">
     </a>
     <nav>
-      <a th:href="@{/public/main}" class="mr-4">홈</a>
+      <a href="/public/main" class="mr-4">홈</a>
       <a href="/public/userboardCollection" class="mr-4">오늘의 동친</a>
       <a href="/public/meetsCollection" class="mr-4">내 주변 모임</a>
       <a href="/public/MyPage" class="mr-4">MyPage</a>
