--- a/src/main/resources/templates/profileCollection.html
+++ b/src/main/resources/templates/profileCollection.html
@@ -3,7 +3,7 @@
   <script src="/js/auth.js" defer></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profile Page</title>
+  <title>ProfileCollection</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -14,16 +14,20 @@
   <link rel="icon" href="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FoXBYw%2FbtsIPXrDjTc%2FpLzzFxLchTAtiBSFLAfEX1%2Fimg.png" type="image/x-icon">
 </head>
 <body class="bg-gray-100">
-<header class="bg-white shadow">
-  <div class="container mx-auto px-4 py-4 flex justify-between items-center">
+<header class="flex justify-between items-center p-4 bg-white shadow">
+  <div class="flex items-center">
     <a href="/public/main">
       <img src="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96" width="70" height="70" alt="Logo" class="mr-4">
     </a>
-    <nav class="space-x-4">
+    <nav>
+      <a href="/public/main" class="mr-4">홈</a>
+      <a href="/public/userboardCollection" class="mr-4">오늘의 동친</a>
       <a href="/public/meetsCollection" class="text-gray-700">내 주변 모임</a>
       <a href="/public/MyPage" class="text-gray-700">My Page</a>
     </nav>
-    <button class="bg-black text-white px-4 py-2 rounded" id="logoutButton">로그아웃</button>
+  </div>
+  <div class="flex items-center">
+  <button class="bg-black text-white px-4 py-2 rounded" id="logoutButton">로그아웃</button>
   </div>
 </header>
 <main class="container mx-auto px-4 py-8">
