--- a/src/main/resources/templates/userboardCollection.html
+++ b/src/main/resources/templates/userboardCollection.html
@@ -28,6 +28,7 @@
   </style>
 </head>
 <body class="bg-gray-100">
+<header class="flex justify-between items-center p-4 bg-white shadow">
 <div class="flex items-center">
   <a href="/public/main">
     <img src="https://github.com/user-attachments/assets/38c43d3b-dce7-422c-b89a-572308799e96" width="70" height="70" alt="Logo" class="mr-4">
@@ -37,10 +38,12 @@
     <a href="/public/userboardCollection" class="mr-4">오늘의 동친</a>
     <a href="/public/meetsCollection" class="mr-4">내 주변 모임</a>
     <a href="/public/MyPage" class="mr-4">MyPage</a>
-    <button id="logoutBtn" class="bg-black text-white px-4 py-2 rounded">로그아웃</button>
   </nav>
 </div>
-<div class="container mx-auto px-4 py-8">
+  <div class="flex items-center">
+  <button id="logoutBtn" class="bg-black text-white px-4 py-2 rounded">로그아웃</button>
+</div>
+</header>
   <h1 class="text-3xl font-bold mb-8">내 게시물 모아보기</h1>
   <div>
     <button id="createBoardBtn" class="bg-blue-500 text-white px-4 py-2 rounded mb-4">
