feat : 프론트 구현 //모임장이 아닐경우 삭제버튼 , 신청자목록 확인감추기 모임생성자와 접속한 유저의 아이디가 같지않으면서 프론트에서 사용자에게 보여줄 오류메시지 구현 및 정리

--- a/src/main/resources/templates/InvitationList.html
+++ b/src/main/resources/templates/InvitationList.html
@@ -30,10 +30,11 @@
 <script>
     const accessToken = localStorage.getItem('Authorization');
     document.addEventListener('DOMContentLoaded', function () {
-        //   const urlParams = new URLSearchParams(window.location.search);
-        //    const meetId = urlParams.get('meetId'); // URL 에 해당 그룹에 대한 아이디 가져옴
+        const urlParams = new URLSearchParams(window.location.search);
+        const meetId = urlParams.get('meetId'); // URL 에 해당 그룹에 대한 아이디 가져옴
         const accessToken = localStorage.getItem("Authorization")
-        const meetId = 1;
+
+
         fetch(`/groups/${meetId}/invitation`, {
             method: 'GET',
             headers: {
