feat : 프론트 구현 에러수정중

--- a/src/main/resources/templates/userboard.html
+++ b/src/main/resources/templates/userboard.html
@@ -404,7 +404,7 @@
         const commentElement = document.getElementById(`comment-${commentId}`);
         const contentElement = commentElement.querySelector('.text-gray-600');
         const originalContent = contentElement.textContent;
-        const likeCountEl = document.getElementById(`likeCount`);
+        const likeCountEl = commentElement.querySelector('.comment-like-count');
         const likeCount = likeCountEl.textContent;
         const editButton = commentElement.querySelector('.edit-button');
         if (editButton) {
